moved apiStatus to it's own struct [ci skip]

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -222,7 +222,7 @@
     }
 
     setInterval(() => {
-      renderTable();
+      renderTable(tickets);
     }, 30000);
 
     document.addEventListener('visibilitychange', function() {
